--- a/src/BugStore.csproj
+++ b/src/BugStore.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>73640578-4fdd-45b1-bb16-41dc0a73dcaf</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
